--- a/assets/index.html
+++ b/assets/index.html
@@ -170,6 +170,38 @@
             
         </div>
     </section>
+    <section>
+        <div class="flex flex-col mt-24 md:flex-row md-space-x-6">
+            <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryligtgrey md:w-1/3">
+                <img src="/1-intro-photo-final.jpg"  class="w-16 -mt-14 rounded-full">
+                <h5 class="text-lg black font-bold">Risharr Watts</h5>
+                <p class="text-sm text-black">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem labore doloremque praesentium consectetur maxime obcaecati, ipsum corrupti ducimus libero repellat, laborum mollitia deserunt nobis sint? Dolor atque voluptatibus omnis commodi!
+                </p>
+
+            </div>
+        </div>
+        <div class="flex flex-col mt-24 md:flex-row md-space-x-6">
+            <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryligtgrey md:w-1/3">
+                <img src="/1-intro-photo-final.jpg"  class="w-16 -mt-14 rounded-full">
+                <h5 class="text-lg black font-bold">Risharr Watts</h5>
+                <p class="text-sm text-black">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem labore doloremque praesentium consectetur maxime obcaecati, ipsum corrupti ducimus libero repellat, laborum mollitia deserunt nobis sint? Dolor atque voluptatibus omnis commodi!
+                </p>
+
+            </div>
+        </div>
+        <div class="flex flex-col mt-24 md:flex-row md-space-x-6">
+            <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryligtgrey md:w-1/3">
+                <img src="/1-intro-photo-final.jpg"  class="w-16 -mt-14 rounded-full">
+                <h5 class="text-lg black font-bold">Risharr Watts</h5>
+                <p class="text-sm text-black">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem labore doloremque praesentium consectetur maxime obcaecati, ipsum corrupti ducimus libero repellat, laborum mollitia deserunt nobis sint? Dolor atque voluptatibus omnis commodi!
+                </p>
+
+            </div>
+        </div>
+    </section>
 
     
 </body>
